# mem-pattern-recognition

./: CMakeLists.txt
scripts/: build.sh  env.sh  run_app.sh  run_apps.sh
